<resources>
    <string name="app_name">ONE</string>
    <string name="number">VOL.1337</string>
    <string name="sentence">星球1301号</string>
    <string name="writer_content">赵喻非 作品</string>
    <string name="_20">20</string>
    <string name="time_content">Jun,2016</string>
    <string name="text">如果雨之后还是雨，如果忧伤之后仍是忧伤，请让我从容面对这别离之后的别离。微笑地继续去寻找，一个不可能再出现的你。from 《雨中的了悟》</string>


    <string name="time_page">January21,2016</string>
    <string name="title">今天晚上不吃你</string>
    <string name="writer_page">作者/一军</string>
    <string name="page_main0">大概很多年前，放学回来，如果看到在弄堂里踱步的鸡，我就知道，我们家今晚要吃鸡了。</string>

    <string name="page_main1">我妈一直告诫我要有礼貌，弄堂里看到人要叫。我生性腼腆，总是怯生生的，不过跟鸡打招呼我倒是很乐意。如果它没有睬我，我还会蹲下来瞅到它看我为止。我妈就站在旁边跟邻居聊天，正值夏天，她宽松的丝绸裤子在鸡旁边一晃一晃，颜色同抖擞的鸡冠一模一样。</string>

    <string name="page_main2">再小一点的时候跟她去过几次菜市场，禽类的气味老远就能闻到，关在笼子的鸡也好，鸽子也好，扑腾着两只翅膀挤来挤去，但是这并不是最难闻的。贩子摊前摆着一大桶滚烫的开水，水蒸气和牲畜的味道混在一起，恶醺醺地扑面而来，都不等人屏住呼吸。开水桶冒着热气，旁边是四散的羽毛，湿漉漉地趴在地上，又容易黏附到鞋跟，人来人往，也不知道会被带到什么地方去。</string>

    <string name="page_main3">这个时候，我还非得不知好歹地再问一句：“妈妈……他们在干嘛？”</string>

    <string name="page_main4">“干嘛？还不是让你这种人有鸽子吃！哎，今天这个青菜多少钱一斤？”</string>

    <string name="page_main5">有时候为了省钱，我妈也会自己动手。幼年的我对这些还没有概念，问我妈为什么要自己杀鸡，我妈就拎着那死鸡看看我跟我爸：“杀鸡儆猴啊。”</string>


    <string name="page_main6">我跟我爸都属猴，爸爸家里的亲戚十个里面有八个都属猴，像花果山似的。我曾经天真地以为，我们属猴的身份一定特别高贵，非得一整只活鸡孝敬不可。</string>

    <string name="page_main7">杀鸡的时候不能让鸡死得痛快，得把血放干净了才行。我看得心里发慌，又忍不住盯着褐色的地面，暗红色的血水拐过阴沟，蔓延出像静脉一样的线条，我就盯着它们，害怕它们朝我流过来。</string>

    <string name="page_main8">有一回不知道什么事，我妈当天没杀那只鸡，她把鸡抱到楼上来，放在木桶里，盖上盖子，露出一条缝来。我装模作样做了一会儿功课，实在坐不住了，走过去看它。我怕打开盖子它会跳蹿出来，就眯着眼睛往那条缝里瞧。那是一只无足为奇的鸡，褐红色的羽毛很丰满，看起来甚至显得胀鼓鼓的，散发着有一阵没一阵的臭味。我犹豫了一下还是掀开了盖子，那鸡看看我，在桶里转两圈，看起来非常淡定。</string>

    <string name="page_main9">“你到底知不知道你明天要被杀掉了啊？”</string>

    <string name="page_main10">我试探着去摸它的脖子，刚触摸到羽毛才担心起来它会不会啄我。幸亏没有，它就任凭我摸，偶尔犯两声嘀咕。我一下子喜不自禁，得寸进尺，跟它说起话来。不知道它是不是更喜欢一个人呆着，时至今日，我也没办法再追究了。反正那个时候，我就盘腿坐下，开始跟它唠嗑。它倒不怯生，甚至有点喜欢我，我说它听，摸它也不躲，偶尔和我面面相觑。瓦片屋顶一点点被余晖盖过，到了傍晚的时候，我已经跟这只鸡建立了深厚的革命友谊。但是我又不知道，能在它有限的生命里为它做什么。</string>

    <string name="introduce0">作者</string>


    <string name="time_questions">Januany21,2016</string>
    <string name="question1">不努力学习就可以成功吗?</string>
    <string name="answer1">不努力学习就成功不了，不要投机取巧，学习没有捷径。书海有路勤为径，学海无涯苦作舟。敏而好学，不耻下问</string>
    <string name="question2">月入十万难不难？
？</string>
    <string name="answer2">
        1
    刚工作的时候，在北上广打拼的朋友们工资动辄1万起，刚开始还互聊对方的月收入，过了两年都变成聊年薪了。但是，随着时间的推移，这种高薪会渐渐变得很鸡肋。

    参照我那些发小的收入轨迹，离开学校后进入外企工作，月薪从七八千起跳，年收入10万左右；努力工作两三年，年收入进入20-30万的区间值；再然后工资涨幅放缓，如果职位上一直停滞不前，走资深中层路线，工资最多在30-40万之间封顶，如果职位上有突破，那么年收入会进入到50-60万的区间。

    工作年限在10-15年，年收入50-60万已经是很不错的成绩，甚至在职场上也算是小有发言权的人物。

    以60万作为理想状态，月收入是5万，算是相当亮眼的收入，看看我们身边，除了创业做生意并且成功的人，工薪阶层的哥哥姐姐们有多少年收入是60万的？

    所以，从工薪层的角度来看，月收入过10万真的非常难。月收入10万就意味着年收入120万，对于企业来说，他花百万请来的人才注定要撬起几千万的利润才行，这可不是普通人可以完成的工作业绩。此外，也不是每个企业都有这样的豪气来支付这笔百万的年薪。

    所以，面对“月入10万难不难”的命题，从雇员的角度出发，基本上对于我们这类进入职场尚达不到10年的人而言，难于上青天。



        2
    在这个互联网时代，很少真的有死胡同，换个角度看待问题，可能就完全不同了。

    当雇员，是食物链的最低端，付出最大的辛苦，换取最少的利润，命运掌握在别人的手上，却没有丝毫的发言权。那么真正站在食物链顶端并且占有最大利润额的人，才会拥有高收入。

    大家有没有想过一个问题，当老板给你发一个月1万元工资的时候，你实际得为他挣了多少钱？或者我换个角度问，如果你是老板，招聘10个员工干活，他们一个月给你营收多少，你才愿意拿出10万元（人均1万）作为工资？

    我之前遇到过一个创业团队，老板掌握最大的人脉资源，然后找了8个年轻人组成核心团队做项目，项目一单谈下来200万，扣除了乱七八糟的运营费用，还有150万，然后核心团队平均每人拿3万，余下的126万归老板。

    对于8个年轻人而言，一个项目拿3万元可以秒杀身边很多朋友，但实际上，他们也不过是喝了点汤而已，肉被老板拿了。

    大家都会看《穷爸爸富爸爸》，青琦从头到尾都没有讲具体的理财方式，在他看来方式很次要，真正重要的是依靠理念“逃离老鼠圈怪圈”，也就是想办法把自己从“雇员”的思维转化到“雇主”的思维，依靠别人的力量帮助自己成为千万富翁。

    对于老板这个角色而言，“月入十万”压根不是自己去操心的事情，只是靠手下完成的一个工作指标罢了。

    3
    上面段落写完，或许大家觉得月入十万没有希望了，人生太TM悲催了，这年头怎么可能人人当老板，且还能拥有丰富的人脉资源，然后拥有定价权。

    其实没有这么可悲，在这个“消费知识”互联网时代，很多人成为了“第三种角色”，这种角色介于雇主和雇员之间，可以自由转换，既承担一些乙方的工作量，又部分拥有甲方的话语权。

    只要拥有“差异且独特”的能力，以及一定的社会影响力，那么就能够产生一定量级的定价权。

    大家知道“斜杠青年”吗，互联网时代下拥有多重身份的职场角色，多重身份就意味着收入多元化，就意味一个人可以不依靠职场上的那份工资过日子，更意味着要是哪天老板让你觉得很不爽，可以拍着桌子说，“老子我不干了！”

    我以前一直强调收入多元化会带来自由，其实这种自由选择背后就是“有钱买尊严”。

    前段日子，我有个朋友工作不顺利，总说老板很无良，到处压榨他们，最后跟我说“生活不容易，被工作困死在这个破地方”。

    我当时直接跟他说，“谁说跳不出这个破地方，如果有一天你月收入是你一个月工资的10倍，那时候你就不会说自己跳不出来的话了”。

    所以当一个人进入到“斜杠青年”的角色后，他的收入会变得多元化，月入2万、5万甚至10万其实并不能算是艰难的事情。

    我可以拿小明同学举例说明：

    1、小明同学每天花3个小时在家里写小说，并且在各大平台积极投稿，2年时间里经历了很多次拒稿后终于有了起色，小说开始受到好评，粉丝也越来越多，出版社纷纷邀约。

    2、书上市后，小明跟着出版社一整年跑了40多场分享会，在图书馆、书店以及高校进行推广签售，销量终于破了10万册，给小明带来了30万的版税收益。

    3、一些精彩的作品被影视公司买走，又给小明带来了20万的收益。

    4、小明因为全国各地做推广，声名鹊起，开始有电台电视邀请他去做嘉宾，出场费加起来也有20多万。

    5、小明有很多忠实的粉丝，为了能够跟粉丝有更好的互动，于是成立了收费会员群，每个会员入会费是一年500元，只要有1000个粉丝入会，就是50万的收入。

    光以上1-5个活动，小明的年收入就达到了120万，月入10万已经实现了。

    一旦小明的社会影响力上了规模，就会有更多的商机找上门来，新的书稿邀约，更多的商业嘉宾邀约，更大规模的会员入会，甚至他还可以参与大到电影制作，小到电视剧改编，总之人只要思维活起来，会发现钱跟滚雪球一样越滚越大。

    如果有人说他自己复制不了小明同学的轨迹，因为他文笔不好，不会坚持训练写作，不会跟出版社搞好关系，不会积累社交媒体上的粉丝，并且不愿意像小明同学一样无报酬的坚持写文章2年，所以小明同学的方式不可用也不可信。

    那么，一个既不愿意提升自己能力，又不愿意积极学习，还不愿意着手尝试的人，有什么资格想要“月入十万”的生活？难道要别人努力了之后，把钱送给他？

    小明是一个例子，其实放眼互联网，很多人都因为身份的多元化而积累了一大笔财富。

    各大平台的女主播打扮得花枝招展在电脑前唱歌跳舞，按时按点有一堆男性屌丝打钱送花，轻松月入数万；日本的木下妹子的“木下养不起”吃饭系列让全世界的人追着看，YOUTUBE的点击直接破亿，订阅量过了100万，她可以接广告，拍短视频，轻松月入几十万；微博微信上那些小到几十万粉丝的小咖，大到几百万粉丝的大咖，写个段子，植入个广告，分分钟几万元广告收入到账，一个月做10单，大家算算月入多少钱？

    有人说这些人的核心是“粉丝群体多，社会影响力大”，没错这的确是他们的“王炸”。可是换个角度问问，庞大的粉丝群体是怎么来的，博主一定是依靠独特的个人魅力来深耕网络才能汇集大量的粉丝群体，也渐渐形成自己的品牌特色并且持续输出更多的信息来粘住粉丝群体，这本身就是一件很不容易的事情。

    4
    最后回到那个问题“月入10万，难不难”？

    1、如果是给老板打工，在团队中一直处于食物链底层的话，不要期待月入10万了，能保证自己的收入持续上升就是件可喜可贺的事情了。

    2、如果没有稀缺资源信息，成为不了食物链上游的雇主，那么就考虑让自己变成互联网时代下的一名“斜杠青年”，依靠自身的才华去开辟多渠道的收入源泉。

    尝试着动脑子，将一种能力转化成不同的形式，然后跟市场对接后进行变现。

    一本有趣的书可以做成文字版、漫画版、有声版；一个好剧本可以变成舞台剧、电台深夜故事，上大银幕和小银幕；一个职场技能可以变成课程教案无限量复制传播等等。

    总之，不要用给人打工的模式去寻找“月入10万”的机会，而是要以创业者思维去经营自己的人生。

    希望有志之士从此刻起开始自己的“月入十万”探索之旅，不要觉得这个梦想很可怕，你先迈出第一步，再去想第二步怎么走，走久了就会发现，梦想有成真的那么一天。</string>

    <string name="title_stow">向日葵油画</string>
    <string name="main_stow">这幅油画积累了作者毕生的经历，998只要998，你买不了吃亏买不了上当。走过路过不要错过。瞧一瞧看一看全场2元。</string>


</resources>

