<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/home">




    <TextView
        android:id="@+id/text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:text="@string/number"
        android:textSize="20sp"
        />


    <ImageView
        android:id="@+id/imgv0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/abc"
        android:layout_below="@id/text0"
        android:layout_marginTop="-32dp"
        />


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentence"
        android:textSize="18sp"
        android:textColor="#464343"
        android:layout_below="@id/imgv0"
        android:layout_marginTop="-25dp"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#464343"
        android:text="@string/writer_content"
        android:textSize="18sp"
        android:layout_below="@id/text1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        />


    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="#7070ef"
        android:textSize="30sp"
        android:layout_below="@+id/text2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_content"
        android:textColor="#464343"
        android:textSize="12sp"
        android:layout_below="@id/text3"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:id="@+id/wenzi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:background="@drawable/bg_home_saying"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/text2"
        android:layout_toRightOf="@id/text3"
        android:layout_marginLeft="12dp"
        />




</RelativeLayout>
