<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_height="match_parent">




    <TextView
        android:id="@+id/time_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_questions"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/question_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_question"
        android:layout_below="@id/time_question"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/time_question"
        android:layout_toRightOf="@id/question_icon"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        />


    <TextView
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:layout_below="@id/question_icon"
        android:paddingTop="10dp"/>


    <ImageView
        android:id="@+id/line_questions"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/answer1"
        android:background="#837f7f"
        android:layout_marginTop="10dp"/>




    <ImageView
        android:id="@+id/question_icon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_question"
        android:layout_below="@id/line_questions"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/line_questions"
        android:layout_toRightOf="@id/question_icon2"
        android:paddingTop="22dp"
        android:paddingLeft="10dp"
        />


    <TextView
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:layout_below="@id/question_icon2"
        android:paddingTop="10dp"/>


</RelativeLayout>