<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_height="match_parent">





    <TextView
        android:id="@+id/time_stow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/time_questions"/>


    <ImageView
        android:id="@+id/image_stow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/abc"

        />


    <TextView
        android:id="@+id/title_stow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_stow"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/image_stow"
        android:layout_marginTop="-20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_stow"
        android:layout_below="@id/title_stow"
        android:paddingTop="10dp"
        android:textSize="15sp"
        android:textColor="#363535"/>

</RelativeLayout>